Prevent scrolling the screen behind overlays

--- a/app/sass/components/_overlay.scss
+++ b/app/sass/components/_overlay.scss
@@ -12,4 +12,10 @@
     left: 0px;
     width: 100%;
     overflow-x: hidden;
+
+    // prevent scrolling the screen being covered over
+    & + .container-inner {
+        position: fixed;
+        width: 100vw;
+    }
 }
