--- a/app/sass/screens/_about-save-level.scss
+++ b/app/sass/screens/_about-save-level.scss
@@ -1,12 +1,6 @@
 #about-save-level-screen {
     padding-left: 10px;
 
-    // level editor overlay
-    & + .container-inner {
-        position: fixed;
-        width: 100vw;
-    }
-
     .row {
         margin-top:20px;
         padding: 10px;
